# miniml

./: .gitignore  dune  dune-project
example/: lexerror.mll  test.mml
lib/: dfa.ml  dune  lexer.ml  utils.ml
lib/Lexical/: lexer.ml  nfa.ml  regexp.ml  token.ml
lib/Syntax/: ast.ml  grammar.ml  parser.ml
test/: dune  test.ml  test_ast.ml  test_lexer.ml
