(lang dune 3.17)

(name miniml)

(generate_opam_files true)

(source
 (github gerfautge/miniml))

(authors "Luc Videau <luc.videau00@gmail.com>")

(license LICENSE)


(package
 (name miniml)
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
